--- a/.github/workflows/lint-test-deploy.yml
+++ b/.github/workflows/lint-test-deploy.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Lint
         run: npm run lint
   test:
-    uses: lint
+    needs: lint
     runs-on: ubuntu-latest
     steps:
       - name: Get code
@@ -21,7 +21,7 @@ jobs:
       - name: Test
         run: npm run test
   deploy:
-    uses: test
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Get code
