ci: fix event-details action

--- a/.github/workflows/event-details.yml
+++ b/.github/workflows/event-details.yml
@@ -7,4 +7,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 'Details'
-        run: echo '${{ toJSON(github.event.issues) }}'
+        run: echo '${{ github.event.issues }}'
